--- a/css/index.less
+++ b/css/index.less
@@ -94,6 +94,19 @@ body {
       }
     }
   }
+  .tan-yes{
+    display:none;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    background:rgba(0,0,0,.1);
+    transform: translate(-50%, -50%);
+    width:150px;
+    height:50px;
+    border-radius:10px;
+    text-align: center;
+    line-height:50px;
+  }
 }
 header {
   width: 100%;
