--- a/view/basic.html
+++ b/view/basic.html
@@ -118,7 +118,7 @@
                 </select>
             </div>
             <div class="top2">
-                <input type="button" value="修改">
+                <!-- <input type="button" value="修改"> -->
                 <input type="button" id="newAdd" value="新增">
                 <input id="delall" type="button" value="删除">
                 <input type="button" id="exportExcel" value="导出">
