--- a/view/waterDepthData.html
+++ b/view/waterDepthData.html
@@ -40,7 +40,7 @@
                     <li>
                         <span>序号</span>
                         <span>时间</span>
-                        <span>水浸</span>
+                        <span>水位高度</span>
                     </li>
                 </ul>
                 <ul class="tableContent" id="tableContent">
