--- a/view/wellCoverData.html
+++ b/view/wellCoverData.html
@@ -40,10 +40,11 @@
                     <li>
                         <span>序号</span>
                         <span>时间</span>
-                        <span>报警角度</span>
-                        <span>背景角度</span>
+                        <!-- <span>报警角度</span>
+                        <span>背景角度</span> -->
+                        <span>偏移角度</span>
                         <span>雨水状态</span>
-                        <span>电视电压</span>
+                        <span>电池电压</span>
                     </li>
                 </ul>
                 <ul class="tableContent" id="tableContent">
