--- a/view/waterDepth.html
+++ b/view/waterDepth.html
@@ -30,7 +30,7 @@
             <div class="top2">
                 <div class="top2_left" id="top2_left">
                     <input name="1" data-id="depth" checked type="radio">
-                    <label>水浸</label>
+                    <label>水位高度</label>
                 </div>
                 <div class="main" id="main" style="width: 1200px;height:600px;"></div>
                 <div class="message" id="message"></div>
