--- a/view/wellCover.html
+++ b/view/wellCover.html
@@ -30,9 +30,9 @@
             <div class="top2">
                 <div class="top2_left" id="top2_left">
                     <input name="1" data-id="alarmAng" checked type="radio">
-                    <label>报警角度</label>
-                    <input name="1" data-id="bgAngle" type="radio">
-                    <label>背景角度</label>
+                    <label>偏移角度</label>
+                    <!-- <input name="1" data-id="bgAngle" type="radio">
+                    <label>背景角度</label> -->
                     <input name="1" data-id="rainStatu" type="radio">
                     <label>雨水状态</label>
                     <input name="1" data-id="voltage" type="radio">
