--- a/view/css/basic.css
+++ b/view/css/basic.css
@@ -467,3 +467,16 @@ section .menu-bottom-wrap .menu-bototm .pageIndex a:first-of-type {
 .tan-wrap .basic-del .basic-del-bottom input:first-of-type {
   color: #1ea0e3;
 }
+.tan-wrap .tan-yes {
+  display: none;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  background: rgba(0, 0, 0, 0.1);
+  transform: translate(-50%, -50%);
+  width: 150px;
+  height: 50px;
+  border-radius: 10px;
+  text-align: center;
+  line-height: 50px;
+}
