--- a/view/runStatus.html
+++ b/view/runStatus.html
@@ -118,7 +118,7 @@
                         <span>离线</span>
                         <span>故障</span>
                     </div>
-                    <input type="button" id="exportExcel" value="导出">
+                    <!-- <input type="button" id="exportExcel" value="导出"> -->
                 </div>
             </div>
             <div class="tables">
@@ -133,95 +133,10 @@
                         <span>设备编码</span>
                         <span>设备安装位置</span>
                         <span>运行状态</span>
-                        <span>操作</span>
+                        <!-- <span>操作</span> -->
                     </li>
                 </ul>
                 <ul class="tableContent" id="tableContent">
-                    <li>
-                        <span>
-                            <input type="checkbox" name="xz" id="">1
-                        </span>
-                        <span>潼湖小镇</span>
-                        <span>水质检测系统</span>
-                        <span>A区水质检测设备</span>
-                        <span>01</span>
-                        <span>THXZ-01-01</span>
-                        <span>住宅A区</span>
-                        <span>昆特</span>
-                        <span>
-                            <a class="hulue">忽略</a>
-                            <a class="baoxiu">报修</a>
-                            <a class="tingyong">停用</a>
-                        </span>
-                    </li>
-                    <li>
-                        <span>
-                            <input type="checkbox" name="xz" id="">1
-                        </span>
-                        <span>潼湖小镇</span>
-                        <span>水质检测系统</span>
-                        <span>A区水质检测设备</span>
-                        <span>01</span>
-                        <span>THXZ-01-01</span>
-                        <span>住宅A区</span>
-                        <span>昆特</span>
-                        <span>
-                            <a class="hulue">忽略</a>
-                            <a class="baoxiu">报修</a>
-                            <a class="tingyong">停用</a>
-                        </span>
-                    </li>
-                    <li>
-                        <span>
-                            <input type="checkbox" name="xz" id="">1
-                        </span>
-                        <span>潼湖小镇</span>
-                        <span>水质检测系统</span>
-                        <span>A区水质检测设备</span>
-                        <span>01</span>
-                        <span>THXZ-01-01</span>
-                        <span>住宅A区</span>
-                        <span>昆特</span>
-                        <span>
-                            <a class="hulue">忽略</a>
-                            <a class="baoxiu">报修</a>
-                            <a class="tingyong">停用</a>
-                        </span>
-                    </li>
-                    <li>
-                        <span>
-                            <input type="checkbox" name="xz" id="">1
-                        </span>
-                        <span>潼湖小镇</span>
-                        <span>水质检测系统</span>
-                        <span>A区水质检测设备</span>
-                        <span>01</span>
-                        <span>THXZ-01-01</span>
-                        <span>住宅A区</span>
-                        <span>昆特</span>
-                        <span>
-                            <a class="hulue">忽略</a>
-                            <a class="baoxiu">报修</a>
-                            <a class="tingyong">停用</a>
-                        </span>
-                    </li>
-                    <li>
-                        <span>
-                            <input type="checkbox" name="xz" id="">1
-                        </span>
-                        <span>潼湖小镇</span>
-                        <span>水质检测系统</span>
-                        <span>A区水质检测设备</span>
-                        <span>01</span>
-                        <span>THXZ-01-01</span>
-                        <span>住宅A区</span>
-                        <span>昆特</span>
-                        <span>
-                            <a class="hulue">忽略</a>
-                            <a class="baoxiu">报修</a>
-                            <a class="tingyong">停用</a>
-                        </span>
-                    </li>
                 </ul>
             </div>
             <div class="menu-bottom-wrap">
