--- a/view/water.html
+++ b/view/water.html
@@ -29,7 +29,7 @@
             </div>
             <div class="top2">
                 <div class="top2_left" id="top2_left">
-                    <input name="1" data-id="ph" checked type="radio">
+                    <input id="ph_radio" name="1" data-id="ph" checked type="radio">
                     <label>PH值</label>
                     <input name="1" data-id="temp" type="radio">
                     <label>温度</label>
