--- a/view/weather.html
+++ b/view/weather.html
@@ -29,7 +29,7 @@
             </div>
             <div class="top2">
                 <div class="top2_left" id="top2_left">
-                    <input name="1" data-id="temp" type="radio" checked>
+                    <input id="temp_radio" name="1" data-id="temp" checked type="radio">
                     <label>温度</label>
                     <input name="1" data-id="humidity" type="radio">
                     <label>湿度</label>
