--- a/view/basic.html
+++ b/view/basic.html
@@ -96,6 +96,7 @@
                 <input type="button" id="basic_del_no" value="取消">
             </div>
         </div>
+        <div id="tan_yes" class="tan-yes">123123123</div>
     </div>
     <div class="wrap">
         <header>
