--- a/view/css/personnel.css
+++ b/view/css/personnel.css
@@ -152,6 +152,13 @@ section .top1 input.sbname {
 section .top1 input.seach {
   margin-left: 30px;
 }
+section .top1 input.exportExcel {
+  border: 1px solid #d7d7d7;
+  background: none;
+  width: 65px;
+  height: 30px;
+  float: right;
+}
 section .top2 {
   margin-top: 30px;
   overflow: hidden;
@@ -166,6 +173,9 @@ section .top2 input {
 }
 section .top2 input:first-of-type {
   margin-left: 0;
+}
+section .top2 input:last-of-type {
+  float: right;
 }
 section .top2 input:hover {
   color: #19a8fb;
