--- a/view/css/personnel.less
+++ b/view/css/personnel.less
@@ -78,6 +78,13 @@ section {
       &.seach{
         margin-left: 30px;
       }
+      &.exportExcel {
+        border: 1px solid #d7d7d7;
+        background: none;
+        width: 65px;
+        height: 30px;
+        float: right;
+      }
     }
   }
   .top2 {
@@ -92,6 +99,9 @@ section {
       float: left;
       &:first-of-type {
         margin-left: 0;
+      }
+      &:last-of-type {
+        float:right;
       }
       &:hover {
         color: #19a8fb;
