--- a/view/personnel.html
+++ b/view/personnel.html
@@ -139,9 +139,9 @@
                 <input class="seach" id="seach" type="button" value="查询">
             </div>
             <div class="top2">
-                <!-- <input type="button" value="修改"> -->
                 <input type="button" id="newAdd" value="新增">
                 <input id="delall" type="button" value="删除">
+                <input type="button" id="exportExcel" value="导出">
             </div>
             <div class="tables">
                 <ul class="titles">
@@ -158,78 +158,6 @@
                     </li>
                 </ul>
                 <ul class="tableContent" id="tableContent">
-                    <li key="1">
-                        <span>
-                            <input type="checkbox" name="xz" id="">1
-                        </span>
-                        <span>潼湖小镇</span>
-                        <span>水质检测系统</span>
-                        <span>A区水质检测设备</span>
-                        <span>01</span>
-                        <span>THXZ-01-01</span>
-                        <span>住宅A区</span>
-                        <span>昆特</span>
-                        <span>2018-03-20</span>
-                        <span>2018-03-20</span>
-                        <span>
-                            <a class="amend">修改</a>
-                            <a class="delete">删除</a>
-                        </span>
-                    </li>
-                    <li key="2">
-                        <span>
-                            <input type="checkbox" name="xz" id="">1
-                        </span>
-                        <span>潼湖小镇</span>
-                        <span>水质检测系统</span>
-                        <span>A区水质检测设备</span>
-                        <span>01</span>
-                        <span>THXZ-01-01</span>
-                        <span>住宅A区</span>
-                        <span>昆特</span>
-                        <span>2018-03-20</span>
-                        <span>2018-03-20</span>
-                        <span>
-                            <a class="amend">修改</a>
-                            <a class="delete">删除</a>
-                        </span>
-                    </li>
-                    <li key="3">
-                        <span>
-                            <input type="checkbox" name="xz" id="">1
-                        </span>
-                        <span>潼湖小镇</span>
-                        <span>水质检测系统</span>
-                        <span>A区水质检测设备</span>
-                        <span>01</span>
-                        <span>THXZ-01-01</span>
-                        <span>住宅A区</span>
-                        <span>昆特</span>
-                        <span>2018-03-20</span>
-                        <span>2018-03-20</span>
-                        <span>
-                            <a class="amend">修改</a>
-                            <a class="delete">删除</a>
-                        </span>
-                    </li>
-                    <li key="4">
-                        <span>
-                            <input type="checkbox" name="xz" id="">1
-                        </span>
-                        <span>潼湖小镇</span>
-                        <span>水质检测系统</span>
-                        <span>A区水质检测设备</span>
-                        <span>01</span>
-                        <span>THXZ-01-01</span>
-                        <span>住宅A区</span>
-                        <span>昆特</span>
-                        <span>2018-03-20</span>
-                        <span>2018-03-20</span>
-                        <span>
-                            <a class="amend">修改</a>
-                            <a class="delete">删除</a>
-                        </span>
-                    </li>
                 </ul>
             </div>
             <div class="menu-bottom-wrap">
