--- a/view/wellCoverData.html
+++ b/view/wellCoverData.html
@@ -20,9 +20,6 @@
                 <span>项目名称</span>
                 <select class="projectName">
                 </select>
-                <!-- <span class="equin">设备系统</span>
-                <select class="equi">
-                </select> -->
                 <span class="sbnamen">设备名称</span>
                 <select name="" class="sbname" id=""></select>
                 <span>选择周期</span>
@@ -31,17 +28,14 @@
                 <span class="m10">至</span>
                 <input type="text" class="demo-input date m0" placeholder="请选择日期" id="failuredata2">
                 <input id="seach" class="seach" type="button" value="查询">
+                <input class="exportExcel" type="button" id="exportExcel" value="导出">
             </div>
-            <div class="top2">
-
-            </div>
+           
             <div class="tables">
                 <ul class="titles">
                     <li>
                         <span>序号</span>
                         <span>时间</span>
-                        <!-- <span>报警角度</span>
-                        <span>背景角度</span> -->
                         <span>偏移角度</span>
                         <span>雨水状态</span>
                         <span>电池电压</span>
