禁用本地字体

--- a/css/index.less
+++ b/css/index.less
@@ -1,24 +1,24 @@
 @import "reset.less";
-@font-face {
-  font-family: "PINGFANGBOLD";
-  src: url("../font/PINGFANGBOLD.TTF");
-}
-@font-face {
-  font-family: "PINGFANGEXTRALIGHT";
-  src: url("../font/PINGFANGEXTRALIGHT.TTF");
-}
-@font-face {
-  font-family: "PINGFANGHEAVY";
-  src: url("../font/PINGFANGHEAVY.TTF");
-}
-@font-face {
-  font-family: "PINGFANGLIGHT";
-  src: url("../font/PINGFANGLIGHT.TTF");
-}
-@font-face {
-  font-family: "PINGFANGMEDIUM";
-  src: url("../font/PINGFANGMEDIUM.TTF");
-}
+// @font-face {
+//   font-family: "PINGFANGBOLD";
+//   src: url("../font/PINGFANGBOLD.TTF");
+// }
+// @font-face {
+//   font-family: "PINGFANGEXTRALIGHT";
+//   src: url("../font/PINGFANGEXTRALIGHT.TTF");
+// }
+// @font-face {
+//   font-family: "PINGFANGHEAVY";
+//   src: url("../font/PINGFANGHEAVY.TTF");
+// }
+// @font-face {
+//   font-family: "PINGFANGLIGHT";
+//   src: url("../font/PINGFANGLIGHT.TTF");
+// }
+// @font-face {
+//   font-family: "PINGFANGMEDIUM";
+//   src: url("../font/PINGFANGMEDIUM.TTF");
+// }
 html,
 body {
   width: 100%;
@@ -39,7 +39,7 @@ body {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    font-family: "PINGFANGMEDIUM";
+    // font-family: "PINGFANGMEDIUM";
     font-weight: bold;
     overflow: hidden;
     width: 440px;
@@ -131,7 +131,7 @@ header {
       margin-left: 494px;
       li {
         cursor: pointer;
-        font-family: "PINGFANGBOLD";
+        // font-family: "PINGFANGBOLD";
         height: 80px;
         float: left;
         line-height: 80px;
@@ -218,7 +218,7 @@ header {
     line-height: 80px;
     color: #ffffff;
     font-size: 14px;
-    font-family: "PINGFANGMEDIUM";
+    // font-family: "PINGFANGMEDIUM";
     img {
       width: 40px;
       height: 40px;
