--- a/view/css/basic.less
+++ b/view/css/basic.less
@@ -1,8 +1,8 @@
 @import "../../css/reset.less";
-@font-face {
-  font-family: "PINGFANGEXTRALIGHT";
-  src: url("../../font/PINGFANGHEAVY.TTF");
-}
+// @font-face {
+//   font-family: "PINGFANGEXTRALIGHT";
+//   src: url("../../font/PINGFANGHEAVY.TTF");
+// }
 html,
 body {
   width: 100%;
@@ -26,7 +26,7 @@ header {
   border-bottom: 1px solid #eeeeee;
   font-weight: bold;
   overflow: hidden;
-  font-family: "PINGFANGEXTRALIGHT";
+  // font-family: "PINGFANGEXTRALIGHT";
   &::after {
     content: "Basic equipment information";
     text-transform: Uppercase;
@@ -103,7 +103,7 @@ section {
     width: 100%;
     overflow-x: auto;
     margin-top: 30px;
-    font-family: "PINGFANGEXTRALIGHT";
+    // font-family: "PINGFANGEXTRALIGHT";
     .titles {
       li {
         background: #edeff1;
@@ -228,6 +228,13 @@ section {
         }
       }
     }
+  }
+  .basicMap{
+    display:none;
+    text-align:center;
+    font-size:50px;
+    padding: 100px;
+    color: #efefef;
   }
 }
 .tan-wrap {
