--- a/view/css/operationReport.less
+++ b/view/css/operationReport.less
@@ -1,8 +1,8 @@
 @import "../../css/reset.less";
-@font-face {
-  font-family: "PINGFANGEXTRALIGHT";
-  src: url("../../font/PINGFANGHEAVY.TTF");
-}
+// @font-face {
+//   font-family: "PINGFANGEXTRALIGHT";
+//   src: url("../../font/PINGFANGHEAVY.TTF");
+// }
 html,
 body {
   width: 100%;
@@ -26,7 +26,7 @@ header {
   border-bottom: 1px solid #eeeeee;
   font-weight: bold;
   overflow: hidden;
-  font-family: "PINGFANGEXTRALIGHT";
+  // font-family: "PINGFANGEXTRALIGHT";
   &::after {
     content: "Equipment running Report";
     text-transform:Uppercase;
@@ -84,9 +84,6 @@ section {
       &:first-of-type {
         margin-left: 0;
       }
-      // &:last-of-type {
-      //   float: right;
-      // }
       &:hover {
         color: #19a8fb;
         border: solid 1px #19a8fb;
