--- a/css/login.less
+++ b/css/login.less
@@ -1,12 +1,12 @@
 @import "reset.less";
-@font-face {
-  font-family: "PINGFANGBOLD";
-  src: url("../font/PINGFANGBOLD.TTF");
-}
-@font-face {
-  font-family: "PINGFANGMEDIUM";
-  src: url("../font/PINGFANGMEDIUM.TTF");
-}
+// @font-face {
+//   font-family: "PINGFANGBOLD";
+//   src: url("../font/PINGFANGBOLD.TTF");
+// }
+// @font-face {
+//   font-family: "PINGFANGMEDIUM";
+//   src: url("../font/PINGFANGMEDIUM.TTF");
+// }
 html,
 body {
   width: 100%;
@@ -54,13 +54,13 @@ body {
             text-transform: Uppercase;
             color: #ffffff;
             font-size: 54px;
-            font-family: "PINGFANGBOLD";
+            // font-family: "PINGFANGBOLD";
             padding: 0 30px;
             &:last-of-type {
               margin-top: 30px;
               text-align: right;
               font-size: 32px;
-              font-family: "PINGFANGMEDIUM";
+              // font-family: "PINGFANGMEDIUM";
             }
           }
         }
@@ -80,7 +80,7 @@ body {
         top: 50%;
         left: 0;
         transform: translateY(-50%);
-        font-size: "PINGFANGMEDIUM";
+        // font-size: "PINGFANGMEDIUM";
         p {
           margin-top: 45px;
           padding-bottom: 2px;
