--- a/view/css/interface.less
+++ b/view/css/interface.less
@@ -1,8 +1,8 @@
 @import "../../css/reset.less";
-@font-face {
-  font-family: "PINGFANGEXTRALIGHT";
-  src: url("../../font/PINGFANGHEAVY.TTF");
-}
+// @font-face {
+//   font-family: "PINGFANGEXTRALIGHT";
+//   src: url("../../font/PINGFANGHEAVY.TTF");
+// }
 html,
 body {
   width: 100%;
@@ -23,7 +23,7 @@ header {
   border-bottom: 1px solid #eeeeee;
   font-weight: bold;
   overflow: hidden;
-  font-family: "PINGFANGEXTRALIGHT";
+  // font-family: "PINGFANGEXTRALIGHT";
   &::after {
     content: "Interface management";
     text-transform: Uppercase;
