--- a/view/css/log.less
+++ b/view/css/log.less
@@ -1,8 +1,8 @@
 @import "../../css/reset.less";
-@font-face {
-  font-family: "PINGFANGEXTRALIGHT";
-  src: url("../../font/PINGFANGHEAVY.TTF");
-}
+// @font-face {
+//   font-family: "PINGFANGEXTRALIGHT";
+//   src: url("../../font/PINGFANGHEAVY.TTF");
+// }
 html,
 body {
   width: 100%;
@@ -26,7 +26,7 @@ header {
   border-bottom: 1px solid #eeeeee;
   font-weight: bold;
   overflow: hidden;
-  font-family: "PINGFANGEXTRALIGHT";
+  // font-family: "PINGFANGEXTRALIGHT";
   &::after {
     content: "Log management";
     text-transform: Uppercase;
@@ -117,7 +117,7 @@ section {
     width: 100%;
     overflow-x: auto;
     margin-top: 30px;
-    font-family: "PINGFANGEXTRALIGHT";
+    // font-family: "PINGFANGEXTRALIGHT";
     .titles {
       li {
         background: #edeff1;
