--- a/view/css/maintenanceTask.less
+++ b/view/css/maintenanceTask.less
@@ -1,8 +1,8 @@
 @import "../../css/reset.less";
-@font-face {
-  font-family: "PINGFANGEXTRALIGHT";
-  src: url("../../font/PINGFANGHEAVY.TTF");
-}
+// @font-face {
+//   font-family: "PINGFANGEXTRALIGHT";
+//   src: url("../../font/PINGFANGHEAVY.TTF");
+// }
 html,
 body {
   width: 100%;
@@ -27,7 +27,7 @@ header {
   border-bottom: 1px solid #eeeeee;
   font-weight: bold;
   overflow: hidden;
-  font-family: "PINGFANGEXTRALIGHT";
+  // font-family: "PINGFANGEXTRALIGHT";
   &::after {
     content: "Maintenance task";
     text-transform: Uppercase;
@@ -350,7 +350,6 @@ section {
       padding: 0 30px;
       .tan-content-left {
         margin-top: 20px;
-        // display: none;
         ul {
           li {
             overflow: hidden;
