--- a/view/css/permission.css
+++ b/view/css/permission.css
@@ -1,85 +1,3 @@
-/*! minireset.css v0.0.3 | MIT License | github.com/jgthms/minireset.css */
-html,
-body,
-p,
-ol,
-ul,
-li,
-dl,
-dt,
-dd,
-blockquote,
-figure,
-fieldset,
-legend,
-textarea,
-pre,
-iframe,
-hr,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0;
-  padding: 0;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-size: 100%;
-  font-weight: normal;
-}
-ul {
-  list-style: none;
-}
-button,
-input,
-select,
-textarea {
-  margin: 0;
-}
-html {
-  box-sizing: border-box;
-}
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
-img,
-embed,
-iframe,
-object,
-audio,
-video {
-  height: auto;
-  max-width: 100%;
-}
-iframe {
-  border: 0;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-td,
-th {
-  padding: 0;
-  text-align: left;
-}
-@font-face {
-  font-family: "PINGFANGEXTRALIGHT";
-  src: url("../../font/PINGFANGHEAVY.TTF");
-}
-@font-face {
-  font-family: "PINGFANGMEDIUM";
-  src: url("../../font/PINGFANGMEDIUM.TTF");
-}
 html,
 body {
   width: 100%;
@@ -103,7 +21,6 @@ header {
   border-bottom: 1px solid #eeeeee;
   font-weight: bold;
   overflow: hidden;
-  font-family: "PINGFANGEXTRALIGHT";
 }
 header::after {
   content: "authority management";
@@ -176,7 +93,6 @@ section .tables {
   width: 100%;
   overflow-x: auto;
   margin-top: 30px;
-  font-family: "PINGFANGEXTRALIGHT";
 }
 section .tables .titles li {
   background: #edeff1;
@@ -339,9 +255,6 @@ section .menu-bottom-wrap .menu-bototm .pageIndex a:first-of-type {
 }
 .tan-wrap .basic-mod .basic-qxpz-top .menus .menuLists .menuLists-ul .menuLists-li .menuleve2-ul .menuleve2-li .menuleve3-ul {
   padding-left: 40px;
-}
-.tan-wrap .basic-mod .basic-qxpz-top .basic-top {
-  font-weight: "PINGFANGMEDIUM";
 }
 .tan-wrap .basic-mod .basic-qxpz-top .basic-top p:first-of-type {
   font-size: 16px;
@@ -516,9 +429,6 @@ section .menu-bottom-wrap .menu-bototm .pageIndex a:first-of-type {
   border-bottom: solid 1px #eeeeee;
   padding-bottom: 29px;
 }
-.tan-wrap .basic-rypz .basic-rypz-top .basic-top {
-  font-weight: "PINGFANGMEDIUM";
-}
 .tan-wrap .basic-rypz .basic-rypz-top .basic-top p:first-of-type {
   font-size: 16px;
   color: #666666;
@@ -577,6 +487,11 @@ section .menu-bottom-wrap .menu-bototm .pageIndex a:first-of-type {
   height: 50px;
   outline: none;
   border-left: #eeeeee solid 1px;
+}
+.tan-wrap .basic-qxpz .basic-qxpz-bottom input:first-of-type {
+  color: #1ea0e3;
+}
+
 }
 .tan-wrap .basic-qxpz .basic-qxpz-bottom input:first-of-type {
   color: #1ea0e3;
