--- a/view/css/permission.less
+++ b/view/css/permission.less
@@ -1,12 +1,12 @@
 @import "../../css/reset.less";
-@font-face {
-  font-family: "PINGFANGEXTRALIGHT";
-  src: url("../../font/PINGFANGHEAVY.TTF");
-}
-@font-face {
-  font-family: "PINGFANGMEDIUM";
-  src: url("../../font/PINGFANGMEDIUM.TTF");
-}
+// @font-face {
+//   font-family: "PINGFANGEXTRALIGHT";
+//   src: url("../../font/PINGFANGHEAVY.TTF");
+// }
+// @font-face {
+//   font-family: "PINGFANGMEDIUM";
+//   src: url("../../font/PINGFANGMEDIUM.TTF");
+// }
 
 html,
 body {
@@ -31,7 +31,7 @@ header {
   border-bottom: 1px solid #eeeeee;
   font-weight: bold;
   overflow: hidden;
-  font-family: "PINGFANGEXTRALIGHT";
+  // font-family: "PINGFANGEXTRALIGHT";
   &::after {
     content: "authority management";
     text-transform: Uppercase;
@@ -105,7 +105,7 @@ section {
     width: 100%;
     overflow-x: auto;
     margin-top: 30px;
-    font-family: "PINGFANGEXTRALIGHT";
+    // font-family: "PINGFANGEXTRALIGHT";
     .titles {
       li {
         background: #edeff1;
@@ -291,7 +291,7 @@ section {
         }
       }
       .basic-top {
-        font-weight: "PINGFANGMEDIUM";
+        // font-family: "PINGFANGMEDIUM";
         p {
           &:first-of-type {
             font-size: 16px;
@@ -474,7 +474,7 @@ section {
         padding-bottom: 29px;
       }
       .basic-top {
-        font-weight: "PINGFANGMEDIUM";
+        // font-family: "PINGFANGMEDIUM";
         p {
           &:first-of-type {
             font-size: 16px;
@@ -525,35 +525,6 @@ section {
     background-color: #ffffff;
     border-radius: 5px;
     overflow: hidden;
-    // .basic-qxpz-top {
-    //   padding: 29px;
-    //   color: #333333;
-    //   .basic-qxpz-title {
-    //     font-size: 18px;
-    //     border-bottom: solid 1px #eeeeee;
-    //     padding-bottom: 30px;
-    //   }
-    //   .basic-top {
-    //     font-weight: "PINGFANGMEDIUM";
-    //     p {
-    //       &:first-of-type {
-    //         font-size: 16px;
-    //         color: #666666;
-    //         margin-top: 30px;
-            
-    //       }
-    //       &:last-of-type{
-    //         label{
-    //           display: inline-block;
-    //           width: 125px;
-    //           margin-top: 27px;
-    //           font-size: 14px;
-    //           color: #999999;
-    //         }
-    //       }
-    //     }
-    //   }
-    // }
     .basic-qxpz-bottom {
       position: absolute;
       bottom: 0;
