部分样式调整

--- a/view/css/weather.css
+++ b/view/css/weather.css
@@ -1,3 +1,77 @@
+/*! minireset.css v0.0.3 | MIT License | github.com/jgthms/minireset.css */
+html,
+body,
+p,
+ol,
+ul,
+li,
+dl,
+dt,
+dd,
+blockquote,
+figure,
+fieldset,
+legend,
+textarea,
+pre,
+iframe,
+hr,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: 100%;
+  font-weight: normal;
+}
+ul {
+  list-style: none;
+}
+button,
+input,
+select,
+textarea {
+  margin: 0;
+}
+html {
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+img,
+embed,
+iframe,
+object,
+audio,
+video {
+  height: auto;
+  max-width: 100%;
+}
+iframe {
+  border: 0;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+td,
+th {
+  padding: 0;
+  text-align: left;
+}
 html,
 body {
   width: 100%;
@@ -86,7 +160,6 @@ section .top2 .top2_left {
   margin: 15px;
   width: 100%;
   float: left;
-  margin-top: 50px;
   margin-left: 80px;
 }
 section .top2 .top2_left input {
@@ -98,7 +171,7 @@ section .main {
 }
 section .message {
   float: right;
-  margin-right: 83px;
+  margin-right: 30px;
   margin-top: 48px;
 }
 section .message ul {
@@ -113,8 +186,5 @@ section .message ul li span {
   display: inline-block;
 }
 section .message ul li span:last-of-type {
-  width: 160px;
-}
-pan:last-of-type {
   width: 160px;
 }
