--- a/view/css/permission.css
+++ b/view/css/permission.css
@@ -1,3 +1,77 @@
+/*! minireset.css v0.0.3 | MIT License | github.com/jgthms/minireset.css */
+html,
+body,
+p,
+ol,
+ul,
+li,
+dl,
+dt,
+dd,
+blockquote,
+figure,
+fieldset,
+legend,
+textarea,
+pre,
+iframe,
+hr,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: 100%;
+  font-weight: normal;
+}
+ul {
+  list-style: none;
+}
+button,
+input,
+select,
+textarea {
+  margin: 0;
+}
+html {
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+img,
+embed,
+iframe,
+object,
+audio,
+video {
+  height: auto;
+  max-width: 100%;
+}
+iframe {
+  border: 0;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+td,
+th {
+  padding: 0;
+  text-align: left;
+}
 html,
 body {
   width: 100%;
@@ -487,11 +561,6 @@ section .menu-bottom-wrap .menu-bototm .pageIndex a:first-of-type {
   height: 50px;
   outline: none;
   border-left: #eeeeee solid 1px;
-}
-.tan-wrap .basic-qxpz .basic-qxpz-bottom input:first-of-type {
-  color: #1ea0e3;
-}
-
 }
 .tan-wrap .basic-qxpz .basic-qxpz-bottom input:first-of-type {
   color: #1ea0e3;
