--- a/view/css/weather.less
+++ b/view/css/weather.less
@@ -98,7 +98,7 @@ section {
       margin: 15px;
       width: 100%;
       float: left;
-      margin-top: 50px;
+      // margin-top: 30x;
       margin-left: 80px;
       input{
         margin-left: 30px;
@@ -111,7 +111,7 @@ section {
     }
     .message{
       float: right;
-      margin-right: 83px;
+      margin-right: 30px;
       margin-top: 48px;
       ul{
         margin: 10px;
