--- a/view/css/permission.less
+++ b/view/css/permission.less
@@ -256,7 +256,8 @@ section {
     display: none;
     position: absolute;
     width: 500px;
-    height: 748px;
+    min-height:521px;
+    max-height: 748px;
     left: 50%;
     top: 20%;
     margin-left: -250px;
