调整部分展示

--- a/view/basic.html
+++ b/view/basic.html
@@ -23,12 +23,14 @@
                 </select>
                 <p>设备名称：</p>
                 <input type="text" name="" id="updateName">
-                <p>设备编码：</p>
-                <input type="text" name="" id="updatecode">
                 <p>设备序号：</p>
                 <input type="text" name="" id="updateId">
+                <p>设备编码：</p>
+                <input type="text" name="" id="updatecode">
                 <p>安装位置：</p>
                 <input type="text" name="" id="updateAddress">
+                <p>设备厂商：</p>
+                <input type="text" name="" id="updateManu">
             </div>
             <div class="basic_mod_bottom">
                 <input type="button" id="basic_mod_yes" value="确定">
@@ -70,14 +72,14 @@
                     <li>
                         <p>安装日期：</p>
                         <div class="layui-input-inline">
-                            <input type="text" class="layui-input" id="makeTimeAdd" placeholder="yyyy-MM-dd HH:mm:ss">
+                            <input type="text" class="layui-input" id="makeTimeAdd" placeholder="请输入安装日期">
                         </div>
                     </li>
                     <li>
                         <p>使用日期：</p>
                         <!-- <input type="text" id="useTimeAdd"> -->
                         <div class="layui-input-inline">
-                            <input type="text" class="layui-input" id="useTimeAdd" placeholder="yyyy-MM-dd HH:mm:ss">
+                            <input type="text" class="layui-input" id="useTimeAdd" placeholder="请输入使用日期">
                         </div>
                     </li>
                 </ul>
