--- a/view/css/basic.less
+++ b/view/css/basic.less
@@ -249,11 +249,11 @@ section {
     display: none;
     position: absolute;
     width: 500px;
-    height: 688px;
+    height: 779px;
     left: 50%;
     top: 50%;
     margin-left: -250px;
-    margin-top: -344px;
+    margin-top: -390px;
     z-index: 11112;
     background-color: #ffffff;
     border-radius: 5px;
@@ -315,8 +315,6 @@ section {
     background-color: #ffffff;
     .basic-add-top {
       padding: 30px;
-      p {
-      }
       ul {
         width: 100%;
         overflow: hidden;
@@ -416,7 +414,7 @@ section {
     position: absolute;
     left: 50%;
     top: 50%;
-    background:rgba(0,0,0,.1);
+    background:rgba(255,255,255,1);
     transform: translate(-50%, -50%);
     width:150px;
     height:50px;
