--- a/css/index.css
+++ b/css/index.css
@@ -150,7 +150,7 @@ body {
   position: absolute;
   left: 50%;
   top: 50%;
-  background: rgba(0, 0, 0, 0.1);
+  background: #ffffff;
   transform: translate(-50%, -50%);
   width: 150px;
   height: 50px;
