--- a/css/index.less
+++ b/css/index.less
@@ -99,7 +99,7 @@ body {
     position: absolute;
     left: 50%;
     top: 50%;
-    background:rgba(0,0,0,.1);
+    background:rgba(255,255,255,1);
     transform: translate(-50%, -50%);
     width:150px;
     height:50px;
