--- a/view/css/basic.css
+++ b/view/css/basic.css
@@ -308,11 +308,11 @@ section .basicMap {
   display: none;
   position: absolute;
   width: 500px;
-  height: 688px;
+  height: 779px;
   left: 50%;
   top: 50%;
   margin-left: -250px;
-  margin-top: -344px;
+  margin-top: -390px;
   z-index: 11112;
   background-color: #ffffff;
   border-radius: 5px;
@@ -473,7 +473,7 @@ section .basicMap {
   position: absolute;
   left: 50%;
   top: 50%;
-  background: rgba(0, 0, 0, 0.1);
+  background: #ffffff;
   transform: translate(-50%, -50%);
   width: 150px;
   height: 50px;
