--- a/view/basic.html
+++ b/view/basic.html
@@ -44,13 +44,11 @@
                     <li>
                         <p>项目名称：</p>
                         <select class="projectNameAdd" name="" id="projectNameAdd">
-
                         </select>
                     </li>
                     <li>
                         <p>系统设备：</p>
                         <select class="typeAdd" name="" id="typeAdd">
-
                         </select>
                     </li>
                     <li>
@@ -66,6 +64,10 @@
                         <input type="text" id="idAdd">
                     </li>
                     <li>
+                        <p>设备安装位置</p>
+                        <input type="text" id="addressAdd">
+                    </li>
+                    <li>
                         <p>厂商：</p>
                         <input type="text" id="manufacturerAdd">
                     </li>
@@ -77,7 +79,6 @@
                     </li>
                     <li>
                         <p>使用日期：</p>
-                        <!-- <input type="text" id="useTimeAdd"> -->
                         <div class="layui-input-inline">
                             <input type="text" class="layui-input" id="useTimeAdd" placeholder="请输入使用日期">
                         </div>
@@ -120,7 +121,7 @@
                     <option value="basicMap">地图模式</option>
                 </select>
             </div>
-            <div class="top2">
+            <div class="basicTable top2">
                 <!-- <input type="button" value="修改"> -->
                 <input type="button" id="newAdd" value="新增">
                 <input id="delall" type="button" value="删除">
