--- a/view/css/permission.css
+++ b/view/css/permission.css
@@ -309,6 +309,8 @@ section .menu-bottom-wrap .menu-bototm .pageIndex a:first-of-type {
   max-height: 748px;
   left: 50%;
   top: 20%;
+  margin-left: -250px;
+  margin-top: -136px;
   z-index: 11112;
   background-color: #ffffff;
   border-radius: 5px;
