新增提示框

--- a/view/personnel.html
+++ b/view/personnel.html
@@ -118,6 +118,7 @@
                 <input type="button" id="basic_del_no" value="取消">
             </div>
         </div>
+        <div id="tan_yes" class="tan-yes"></div>
     </div>
     <div class="wrap">
         <header>
