--- a/view/css/permission.css
+++ b/view/css/permission.css
@@ -566,3 +566,16 @@ section .menu-bottom-wrap .menu-bototm .pageIndex a:first-of-type {
 .tan-wrap .basic-qxpz .basic-qxpz-bottom input:first-of-type {
   color: #1ea0e3;
 }
+.tan-wrap .tan-yes {
+  display: none;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  background: #ffffff;
+  transform: translate(-50%, -50%);
+  width: 150px;
+  height: 50px;
+  border-radius: 10px;
+  text-align: center;
+  line-height: 50px;
+}
