--- a/view/css/permission.less
+++ b/view/css/permission.less
@@ -545,6 +545,18 @@ section {
         }
       }
     }
-    
+  }
+  .tan-yes{
+    display:none;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    background:rgba(255,255,255,1);
+    transform: translate(-50%, -50%);
+    width:150px;
+    height:50px;
+    border-radius:10px;
+    text-align: center;
+    line-height:50px;
   }
 }
