--- a/view/permission.html
+++ b/view/permission.html
@@ -70,6 +70,7 @@
                 <input type="button" id="basic_qxpz_no" value="取消">
             </div>
         </div>
+        <div id="tan_yes" class="tan-yes"></div>
     </div>
     <div class="wrap">
         <header>
