数据展示r图表自适应

--- a/view/waterDepth.html
+++ b/view/waterDepth.html
@@ -32,7 +32,7 @@
                     <input id="depth_radio" name="1" data-id="depth" checked type="radio">
                     <label>水位高度</label>
                 </div>
-                <div class="main" id="main" style="width: 1200px;height:600px;"></div>
+                <div class="main" id="main" style="width: 80%;height:90%;"></div>
                 <div class="message" id="message"></div>
             </div>
         </section>
