--- a/view/weather.html
+++ b/view/weather.html
@@ -41,7 +41,7 @@
                     <label>风力风向</label>
                 </div>
                 
-                <div class="main" id="main" style="width: 1200px;height:600px;"></div>
+                <div class="main" id="main" style="width: 80%;height:90%;"></div>
                 <div class="message" id="message"></div>
             </div>
         </section>
