--- a/view/css/water.less
+++ b/view/css/water.less
@@ -19,7 +19,7 @@ body {
 }
 header {
   width: 100%;
-  height: 80px;
+  height: 10%;
   line-height: 80px;
   font-size: 22px;
   color: #333333;
@@ -38,6 +38,8 @@ header {
   }
 }
 section {
+  width: 100%;
+  height: 83%;
   .top1 {
     overflow: hidden;
     height: 30px;
@@ -91,42 +93,41 @@ section {
       }
     }
   }
-  .top2{
+  .top2 {
     overflow: hidden;
-    width: 1500px;;
-    .top2_left{
+    width: 100%;
+    height: 90%;
+    .top2_left {
       margin: 15px;
       width: 100%;
       float: left;
-      // margin-top: 30px;
       margin-left: 80px;
-      input{
+      input {
         margin-left: 30px;
-        }
       }
     }
-    .main{
-      float: left;
-      margin-left: -70px;
-    }
-    .message{
-      float: right;
-      margin-right: 30px;
-      margin-top: 48px;
-      ul{
-        margin: 10px;
-        li{
-          width: 260px;
-          line-height: 2;
-          span{
-            width: 100px;
-            display: inline-block;
-            &:last-of-type{
-              width: 160px;
-            }
+  }
+  .main {
+    float: left;
+    margin-left: -70px;
+  }
+  .message {
+    float: right;
+    width: 20%;
+    margin-top: 48px;
+    ul {
+      margin: 10px;
+      li {
+        width: 260px;
+        line-height: 2;
+        span {
+          width: 100px;
+          display: inline-block;
+          &:last-of-type {
+            width: 160px;
           }
         }
       }
     }
   }
-
+}
