--- a/view/css/waterDepth.css
+++ b/view/css/waterDepth.css
@@ -88,7 +88,7 @@ body {
 }
 header {
   width: 100%;
-  height: 80px;
+  height: 10%;
   line-height: 80px;
   font-size: 22px;
   color: #333333;
@@ -104,6 +104,10 @@ header::after {
   color: #999999;
   opacity: 0.2;
   text-indent: -75px;
+}
+section {
+  width: 100%;
+  height: 83%;
 }
 section .top1 {
   overflow: hidden;
@@ -154,7 +158,8 @@ section .top1 input.seach {
 }
 section .top2 {
   overflow: hidden;
-  width: 1500px;
+  width: 100%;
+  height: 90%;
 }
 section .top2 .top2_left {
   margin: 15px;
@@ -171,7 +176,7 @@ section .main {
 }
 section .message {
   float: right;
-  margin-right: 30px;
+  width: 20%;
   margin-top: 48px;
 }
 section .message ul {
