--- a/view/css/wellCover.less
+++ b/view/css/wellCover.less
@@ -19,7 +19,7 @@ body {
 }
 header {
   width: 100%;
-  height: 80px;
+  height: 10%;
   line-height: 80px;
   font-size: 22px;
   color: #333333;
@@ -38,6 +38,8 @@ header {
   }
 }
 section {
+  width: 100%;
+  height: 83%;
   .top1 {
     overflow: hidden;
     height: 30px;
@@ -93,12 +95,12 @@ section {
   }
   .top2{
     overflow: hidden;
-    width: 1500px;;
+    width: 100%;
+    height: 90%;
     .top2_left{
       margin: 15px;
       width: 100%;
       float: left;
-      // margin-top: 30px;
       margin-left: 80px;
       input{
         margin-left: 30px;
@@ -111,7 +113,7 @@ section {
     }
     .message{
       float: right;
-      margin-right: 30px;
+      width: 20%;
       margin-top: 48px;
       ul{
         margin: 10px;
