--- a/view/wellCover.html
+++ b/view/wellCover.html
@@ -36,7 +36,7 @@
                     <input name="1" data-id="voltage" type="radio">
                     <label>电池电压</label>
                 </div>
-                <div class="main" id="main" style="width: 1200px;height:600px;"></div>
+                <div class="main" id="main" style="width: 80%;height:90%;"></div>
                 <div class="message" id="message"></div>
             </div>
         </section>
