--- a/view/css/log.css
+++ b/view/css/log.css
@@ -111,9 +111,10 @@ section .top1 {
   font-size: 12px;
   line-height: 30px;
   margin-top: 30px;
+  width: 100%;
 }
 section .top1 span {
-  margin-left: 30px;
+  margin-left: 1%;
   float: left;
 }
 section .top1 span:first-of-type {
@@ -128,7 +129,7 @@ section .top1 span.sbnamen {
 section .top1 select {
   vertical-align: middle;
   height: 30px;
-  margin-left: 5px;
+  margin-left: 1%;
   float: left;
 }
 section .top1 select.alleqi {
@@ -142,15 +143,15 @@ section .top1 select.sbname {
 }
 section .top1 input {
   height: 30px;
-  width: 130px;
-  margin-left: 30px;
+  width: 10%;
+  margin-left: 1%;
   outline: none;
   float: left;
 }
 section .top1 input.sbname {
   background: none;
   border: solid 1px #d7d7d7;
-  width: 130px;
+  width: 10%;
   color: #19a8fb;
 }
 section .top1 input.seach {
