--- a/view/css/log.less
+++ b/view/css/log.less
@@ -44,8 +44,9 @@ section {
     font-size: 12px;
     line-height: 30px;
     margin-top: 30px;
+    width: 100%;
     span {
-      margin-left: 30px;
+      margin-left: 1%;
       float: left;
       &:first-of-type {
         margin-left: 0;
@@ -60,7 +61,7 @@ section {
     select {
       vertical-align: middle;
       height: 30px;
-      margin-left: 5px;
+      margin-left: 1%;
       float: left;
       &.alleqi {
         float: right;
@@ -74,14 +75,14 @@ section {
     }
     input {
       height: 30px;
-      width: 130px;
-      margin-left: 30px;
+      width: 10%;
+      margin-left: 1%;
       outline: none;
       float: left;
       &.sbname {
         background: none;
         border: solid 1px #d7d7d7;
-        width: 130px;
+        width: 10%;
         color: #19a8fb;
       }
       &.seach {
