--- a/view/css/waterDepthData.less
+++ b/view/css/waterDepthData.less
@@ -44,8 +44,9 @@ section {
     font-size: 12px;
     line-height: 30px;
     margin-top: 30px;
+    width: 100%;
     span {
-      margin-left: 30px;
+      margin-left: 1%;
       float: left;
       &:first-of-type {
         margin-left: 0;
@@ -60,7 +61,7 @@ section {
     select {
       vertical-align: middle;
       height: 30px;
-      margin-left: 5px;
+      margin-left: 1%;
       float: left;
       &.alleqi {
         float: right;
@@ -75,7 +76,7 @@ section {
     input {
       height: 30px;
       width: 130px;
-      margin-left: 30px;
+      margin-left: 1%;
       outline: none;
       float: left;
       &.sbname {
@@ -114,6 +115,7 @@ section {
       color: #333333;
       font-size: 12px;
       li {
+        width: 100%;
         line-height: 43px;
         white-space: nowrap;
         overflow: hidden;
@@ -125,23 +127,15 @@ section {
           display: inline-block;
           text-align: left;
           float: left;
-          width: 125px;
+          width: 10%;
           &:first-of-type {
-            // margin-left: 0;
-            width: 80px;
             input {
               vertical-align: -2px;
-              margin: 10px;
+              margin-right: 10px;
             }
           }
           &:nth-of-type(2) {
-            width: 200px;
-          }
-          &:nth-of-type(3) {
-            width: 120px;
-          }
-          &:nth-of-type(4) {
-            width: 160px;
+            width: 20%;
           }
           &:last-of-type {
             a {
