--- a/view/css/wellCover.less
+++ b/view/css/wellCover.less
@@ -113,19 +113,12 @@ section {
     }
     .message{
       float: right;
-      width: 20%;
       margin-top: 48px;
-      ul{
-        margin: 10px;
-        li{
-          width: 260px;
+      table{
+        tr{
           line-height: 2;
-          span{
-            width: 100px;
-            display: inline-block;
-            &:last-of-type{
-              width: 160px;
-            }
+          td{
+            border: solid 1px #cccccc;
           }
         }
       }
