--- a/view/weather.html
+++ b/view/weather.html
@@ -40,9 +40,10 @@
                     <input name="1" data-id="wind" type="radio">
                     <label>风力风向</label>
                 </div>
-                
+
                 <div class="main" id="main" style="width: 80%;height:90%;"></div>
-                <div class="message" id="message"></div>
+                <div class="message" id="message">
+                </div>
             </div>
         </section>
     </div>
