--- a/view/css/water.less
+++ b/view/css/water.less
@@ -91,6 +91,11 @@ section {
         border: none;
         background: -webkit-linear-gradient(90deg, #1ea0e3, #32b5ee, #35bcf0);
       }
+      &.seachNo {
+        color: #ffffff;
+        border: none;
+        background: -webkit-linear-gradient(90deg, #cccccc, #cccccc, #cccccc);
+      }
     }
   }
   .top2 {
