--- a/view/water.html
+++ b/view/water.html
@@ -25,7 +25,7 @@
                 <select name="" class="sbname" id="">
                     <option value="">选择设备名称</option>
                 </select>
-                <input id="seach" class="seach" type="button" value="查询">
+                <input id="seach" class="seachNo" type="button" disabled="disabled" value="查询">
             </div>
             <div class="top2">
                 <div class="top2_left" id="top2_left">
