--- a/view/css/basic.css
+++ b/view/css/basic.css
@@ -77,6 +77,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: #ffffff;
+  user-select: none;
 }
 body {
   position: relative;
@@ -308,15 +309,15 @@ section .basicMap {
   display: none;
   position: absolute;
   width: 500px;
-  height: 779px;
+  height: 582px;
   left: 50%;
-  top: 50%;
+  top: 66%;
   margin-left: -250px;
   margin-top: -390px;
   z-index: 11112;
   background-color: #ffffff;
   border-radius: 5px;
-  overflow: hidden;
+  overflow-y: auto;
 }
 .tan-wrap .basic-mod .basic-mod-top {
   padding: 30px;
@@ -366,7 +367,7 @@ section .basicMap {
   position: absolute;
   width: 960px;
   left: 50%;
-  top: 50%;
+  top: 47%;
   margin-left: -480px;
   margin-top: -282px;
   z-index: 11112;
