--- a/view/css/basic.less
+++ b/view/css/basic.less
@@ -8,6 +8,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: #ffffff;
+  user-select: none;
 }
 body {
   position: relative;
@@ -249,15 +250,15 @@ section {
     display: none;
     position: absolute;
     width: 500px;
-    height: 779px;
+    height: 582px;
     left: 50%;
-    top: 50%;
+    top: 66%;
     margin-left: -250px;
     margin-top: -390px;
     z-index: 11112;
     background-color: #ffffff;
     border-radius: 5px;
-    overflow: hidden;
+    overflow-y: auto;
     .basic-mod-top {
       padding: 30px;
       p {
@@ -307,7 +308,7 @@ section {
     position: absolute;
     width: 960px;
     left: 50%;
-    top: 50%;
+    top: 47%;
     margin-left: -480px;
     margin-top: -282px;
     z-index: 11112;
