--- a/view/css/basic.css
+++ b/view/css/basic.css
@@ -89,8 +89,8 @@ body {
 }
 header {
   width: 100%;
-  height: 80px;
-  line-height: 80px;
+  height: 60px;
+  line-height: 60px;
   font-size: 22px;
   color: #333333;
   border-bottom: 1px solid #eeeeee;
@@ -365,35 +365,41 @@ section .basicMap {
 .tan-wrap .basic-add {
   display: none;
   position: absolute;
-  width: 960px;
+  width: 80%;
+  overflow-y: auto;
+  max-height: 80%;
   left: 50%;
-  top: 47%;
-  margin-left: -480px;
-  margin-top: -282px;
+  top: 50%;
+  transform: translate(-50%, -50%);
   z-index: 11112;
   background-color: #ffffff;
+  border-radius: 5px;
 }
 .tan-wrap .basic-add .basic-add-top {
-  padding: 30px;
+  padding: 1%;
 }
 .tan-wrap .basic-add .basic-add-top ul {
   width: 100%;
   overflow: hidden;
 }
 .tan-wrap .basic-add .basic-add-top ul li {
-  width: 50%;
+  width: 49%;
+  height: 76px;
   float: left;
-  margin-top: 20px;
+  margin-left: 1%;
 }
 .tan-wrap .basic-add .basic-add-top ul li select {
-  margin-top: 14px;
-  width: 440px;
+  margin-top: 1%;
+  width: 100%;
   height: 35px;
+  border: solid 1px #d7d7d7;
 }
 .tan-wrap .basic-add .basic-add-top ul li input {
-  width: 440px;
+  width: 100%;
   height: 35px;
-  margin-top: 14px;
+  margin-top: 1%;
+  border: none;
+  border: solid 1px #d7d7d7;
 }
 .tan-wrap .basic-add .basic-add-bottom {
   overflow: hidden;
