调试井盖数据

--- a/view/wellCover.html
+++ b/view/wellCover.html
@@ -29,11 +29,11 @@
             </div>
             <div class="top2">
                 <div class="top2_left" id="top2_left">
-                    <input id="alarmAng_radio" name="1" data-id="angle_current" checked type="radio">
+                    <input id="alarmAng_radio" name="1" data-id="angleCurrent" checked type="radio">
                     <label>偏移角度</label>
-                    <input name="1" data-id="rainStatu" type="radio">
+                    <input name="1" data-id="alertOutWaterline" type="radio">
                     <label>雨水状态</label>
-                    <input name="1" data-id="voltage" type="radio">
+                    <input name="1" data-id="alertLowbattery" type="radio">
                     <label>电池电压</label>
                 </div>
                 <div class="main" id="main" style="width: 80%;height:90%;"></div>
