--- a/view/css/personnel.less
+++ b/view/css/personnel.less
@@ -363,29 +363,27 @@ section {
           width: 49%;
           float: left;
           margin-top: 20px;
-          mathin-left:1%;
+          margin-left:1%;
           select {
             margin-top: 14px;
-            width: 90%;
+            width: 96%;
             height: 35px;
             border: none;
             border: solid 1px #d7d7d7;
-            margin-left: 5%;
           }
           input {
-            width: 90%;
+            width: 96%;
             height: 35px;
             margin-top: 14px;
             border: none;
             border: solid 1px #d7d7d7;
-            margin-left: 5%;
           }
           &.projectList {
             width: 100%;
           }
           div {
             &.projectNameList {
-              width: 100%; // text-align: left;
+              width: 100%;
               height: 52px;
               input {
                 width: 20px;
@@ -406,7 +404,7 @@ section {
     .basic-add-bottom {
       overflow: hidden;
       margin-top: 15px;
-      border-top: 1px solid #eeeeee;
+      border-top: 1px solid #d7d7d7;
       input {
         float: left;
         width: 50%;
@@ -414,7 +412,7 @@ section {
         background: none;
         height: 50px;
         outline: none;
-        border-left: #eeeeee solid 1px;
+        border-left: #d7d7d7 solid 1px;
         &:first-of-type {
           color: #1ea0e3;
         }
