--- a/view/runStatus.html
+++ b/view/runStatus.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="tan-wrap" id="tan_wrap">
+    <!-- <div class="tan-wrap" id="tan_wrap">
         <div class="basic-mod" id="basic_mod">
             <div class="basic-mod-top">
                 <p class="basic-mod-title">修改信息</p>
@@ -94,7 +94,7 @@
                 <input type="button" id="basic_add_no" value="取消">
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="wrap">
         <header>
             运行状态
