--- a/view/css/runStatus.less
+++ b/view/css/runStatus.less
@@ -142,7 +142,7 @@ section {
       li {
         line-height: 43px;
         white-space: nowrap;
-        width: 1568px;
+        width: 100%;
         overflow: hidden;
         &:nth-of-type(even) {
           background: #f5f9fc;
@@ -152,7 +152,7 @@ section {
           display: inline-block;
           text-align: left;
           float: left;
-          width: 160px;
+          width: 12%;
           &:first-of-type {
             margin-left: 0;
             width: 100px;
@@ -161,16 +161,9 @@ section {
               margin: 10px;
             }
           }
-          &:nth-of-type(3) {
-            // width: 150px;
-          }
-          &:nth-of-type(4) {
-            // width: 160px;
-          }
           &:last-of-type {
             a {
               display: inline-block; 
-              // width: 24px;
               height: 12px;
               margin-right: 29px;
             }
@@ -249,122 +242,122 @@ section {
     }
   }
 }
-.tan-wrap {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 1111;
-  display: none;
-  background-color: rgba(0, 0, 0, 0.5);
-  overflow: hidden;
-  .basic-mod {
-    display: none;
-    position: absolute;
-    width: 500px;
-    height: 688px;
-    left: 50%;
-    top: 50%;
-    margin-left: -250px;
-    margin-top: -344px;
-    z-index: 11112;
-    background-color: #ffffff;
-    border-radius: 5px;
-    overflow: hidden;
-    .basic-mod-top {
-      padding: 30px;
-      p {
-        font-size: 14px;
-        color: #666666;
-        padding: 15px 0 15px 0px;
-        &.basic-mod-title {
-          font-size: 18px;
-          color: #333333;
-          text-align: left;
-          border-bottom: solid 1px #eeeeee;
-          padding: 0 0 30px 0;
-        }
-      }
-      select {
-        width: 100%;
-        height: 35px;
-        padding-left: 12px;
-        border: solid 1px #d7d7d7;
-      }
-      input {
-        width: 100%;
-        height: 35px;
-        padding-left: 12px;
-      }
-    }
-    .basic_mod_bottom {
-      overflow: hidden;
-      margin-top: 25px;
-      border-top: 1px solid #eeeeee;
-      input {
-        float: left;
-        width: 50%;
-        border: none;
-        background: none;
-        height: 50px;
-        outline: none;
-        border-left: #eeeeee solid 1px;
-        &:first-of-type {
-          color: #1ea0e3;
-        }
-      }
-    }
-  }
-  .basic-add {
-    display: none;
-    position: absolute;
-    width: 960px;
-    height: 522px;
-    left: 50%;
-    top: 50%;
-    margin-left: -480px;
-    margin-top: -261px;
-    z-index: 11112;
-    background-color: #ffffff;
-    .basic-add-top {
-      padding: 30px;
-      p {
-      }
-      ul {
-        width: 100%;
-        overflow: hidden;
-        li {
-          width: 50%;
-          float: left;
-          margin-top: 20px;
-          select {
-            margin-top: 14px;
-            width: 440px;
-            height: 35px;
-          }
-          input {
-            width: 440px;
-            height: 35px;
-            margin-top: 14px;
-          }
-        }
-      }
-    }
-    .basic-add-bottom {
-      overflow: hidden;
-      margin-top: 25px;
-      border-top: 1px solid #eeeeee;
-      input {
-        float: left;
-        width: 50%;
-        border: none;
-        background: none;
-        height: 50px;
-        outline: none;
-        border-left: #eeeeee solid 1px;
-        &:first-of-type {
-          color: #1ea0e3;
-        }
-      }
-    }
-  }
-}
+// .tan-wrap {
+//   position: absolute;
+//   width: 100%;
+//   height: 100%;
+//   z-index: 1111;
+//   display: none;
+//   background-color: rgba(0, 0, 0, 0.5);
+//   overflow: hidden;
+//   .basic-mod {
+//     display: none;
+//     position: absolute;
+//     width: 500px;
+//     height: 688px;
+//     left: 50%;
+//     top: 50%;
+//     margin-left: -250px;
+//     margin-top: -344px;
+//     z-index: 11112;
+//     background-color: #ffffff;
+//     border-radius: 5px;
+//     overflow: hidden;
+//     .basic-mod-top {
+//       padding: 30px;
+//       p {
+//         font-size: 14px;
+//         color: #666666;
+//         padding: 15px 0 15px 0px;
+//         &.basic-mod-title {
+//           font-size: 18px;
+//           color: #333333;
+//           text-align: left;
+//           border-bottom: solid 1px #eeeeee;
+//           padding: 0 0 30px 0;
+//         }
+//       }
+//       select {
+//         width: 100%;
+//         height: 35px;
+//         padding-left: 12px;
+//         border: solid 1px #d7d7d7;
+//       }
+//       input {
+//         width: 100%;
+//         height: 35px;
+//         padding-left: 12px;
+//       }
+//     }
+//     .basic_mod_bottom {
+//       overflow: hidden;
+//       margin-top: 25px;
+//       border-top: 1px solid #eeeeee;
+//       input {
+//         float: left;
+//         width: 50%;
+//         border: none;
+//         background: none;
+//         height: 50px;
+//         outline: none;
+//         border-left: #eeeeee solid 1px;
+//         &:first-of-type {
+//           color: #1ea0e3;
+//         }
+//       }
+//     }
+//   }
+//   .basic-add {
+//     display: none;
+//     position: absolute;
+//     width: 960px;
+//     height: 522px;
+//     left: 50%;
+//     top: 50%;
+//     margin-left: -480px;
+//     margin-top: -261px;
+//     z-index: 11112;
+//     background-color: #ffffff;
+//     .basic-add-top {
+//       padding: 30px;
+//       p {
+//       }
+//       ul {
+//         width: 100%;
+//         overflow: hidden;
+//         li {
+//           width: 50%;
+//           float: left;
+//           margin-top: 20px;
+//           select {
+//             margin-top: 14px;
+//             width: 440px;
+//             height: 35px;
+//           }
+//           input {
+//             width: 440px;
+//             height: 35px;
+//             margin-top: 14px;
+//           }
+//         }
+//       }
+//     }
+//     .basic-add-bottom {
+//       overflow: hidden;
+//       margin-top: 25px;
+//       border-top: 1px solid #eeeeee;
+//       input {
+//         float: left;
+//         width: 50%;
+//         border: none;
+//         background: none;
+//         height: 50px;
+//         outline: none;
+//         border-left: #eeeeee solid 1px;
+//         &:first-of-type {
+//           color: #1ea0e3;
+//         }
+//       }
+//     }
+//   }
+// }
